# cmake-tutorial

ex1/: CMakeLists.txt  README.md
ex1/_add/: CMakeLists.txt  add.h
ex2/: CMakeLists.txt  tutorial.c
ex2/_add/: CMakeLists.txt  add.c
ex3/: CMakeLists.txt  README.md  compile_options.cmake  toolchain_GNUARM.cmake
